--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,17 @@
 
 <body>
     <div class="top">
+        <div class="content">
+            <div class="tools">
+                <ul>
+                    <li><a href="#">首页</a></li>
+                    <li><a href="#">lucas</a></li>
+                    <li><a href="#">emotion</a></li>
+                    <li><a href="#">设置</a></li>
+                    <li><a href="#">退出</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
     <div class="wrapper">
         <div class="sep20"></div>
@@ -73,7 +84,33 @@
                 </div>
             </div>
         </div>
-    </div>
+        <div class="rightBar">
+            <div class="inner">
+                <div class="box">
+                    <div class="box-title">
+                        <ul>
+                            <li>
+                                <a href="#"><img id="avatar" src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="avatar"></a>
+                            </li>
+                            <li><a id="name" href="#">lucas</a></li>
+                        </ul>
+                    </div>
+                    <div class="box-content">
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <td><a href="#"><span>9</span><span>主题</span></a></td>
+                                    <td><a href="#"><span>9</span><span>emotion</span></a></td>
+                                    <td><a href="#"><span>9</span><span>好友</span></a></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="create_topic">
+                        <a href="#">发布新主题</a>
+                    </div>
+                </div>
+            </div>
 </body>
 
 </html>
