--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -3,8 +3,6 @@ body {
     min-width: 820px;
     font-family: "JetBrains Mono", "Luxi Sans", "Segoe UI", "Hiragino Sans GB", "Microsoft Yahei", sans-serif, "Apple Logo";
 }
-
-
 /* 标题栏 */
 
 .top {
@@ -100,8 +98,174 @@ body {
 }
 
 
-/* 帖子展示部分 */
+/*问题板块*/
+.left .content .question{
+    width: 770px;
+    height: 120px;
+    margin: 0 auto;
+    padding: 10px;
+    background-color: #18222d;
+    border: #393f4e 1px solid;
+}
+.left .content .question .Question_info {
+    float: left;
+    width: 600px;
+    padding: 10px auto;
+    height: 50px;
+    color: aliceblue;
+}
+.left .content .question .Question_info h3 a {
+    color: aliceblue;
+    font-size: 18px;
+    font-weight: 400;
+}
+.left .content .question .Question_info h3 a:hover {
+    text-decoration: underline;
+}
+.left .content .question .title{
+    padding-bottom: 13px;
+    color: #fff;
+    opacity: 0.4;
 
+
+}
+
+.left .content .question .Question_info .controll {
+    margin-top: 20px;
+    width: 40px;
+    height: auto;
+    border-radius: 20px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+
+.left .content .question .Question_info p {
+    padding-left: 10px;
+    margin-top: 20px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.left .content .question .Question_info #author,
+#reply_who {
+    display: inline-block;
+    color: #9caec7;
+    font-size: 16px;
+}
+
+.left .content .question .Question_info p span {
+    display: inline-block;
+    color: #738292;
+    font-size: 12px;
+    line-height: 200%;
+}
+
+/* 问题面板头像部分 */
+.left .content .question  .TopicAvatar {
+    padding-top: 2px;
+    float: right;
+    width: 100px;
+    height: 100px;
+    
+
+}
+
+.left .content .question .TopicAvatar img {
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+
+    border-radius: 10px;
+}
+
+
+
+
+/*具体问题板块*/
+.left .content .specific_question{
+    width: 770px;
+    height: 90px;
+    margin: 0 auto;
+    padding: 10px;
+    background-color: #18222d;
+    border: #393f4e 1px solid;
+}
+
+.left .content .specific_question .Question_info h3 a {
+    color: aliceblue;
+    font-size: 15px;
+    font-weight: 400;
+}
+
+
+
+
+
+
+/*标签和时间的面板*/
+.left .content .timeAndTags{
+    width: 770px;
+    height: 40px;
+    margin: 0 auto;
+    padding: 10px;
+    background-color: #3e5874;
+    border: #393f4e 1px solid;
+}
+.left .content .timeAndTags .timeAndTags_info {
+   
+    width: 600px;
+    padding: 10px auto;
+    height: 40px;
+    color: aliceblue;
+}
+
+.left .content .timeAndTags .timeAndTags_info p {
+    display: inline-block;
+    vertical-align: middle;
+    
+}
+
+
+.left .content .timeAndTags .timeAndTags_info p span {
+    display: inline-block;
+    padding-bottom: 15px;
+    color: #738292;
+    font-size: 12px;
+    line-height: 200%;
+}
+.left .content .timeAndTags .timeAndTags_info  #type {
+    padding: 0 10px;
+    font-size: 13px;
+    line-height: 24px;
+    background-color: #393f4e;
+    color: aliceblue;
+    border-radius: 5px;
+
+
+}
+
+.left .content .timeAndTags .timeAndTags_info  #type:hover {
+    background-color: rgb(156, 174, 199);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 帖子展示部分 */
 .left .content .item {
     width: 770px;
     height: 80px;
@@ -168,6 +332,7 @@ body {
 
 .left .content .item .TopicInfo p {
     margin-top: 5px;
+    font-size: 15px;
 }
 
 .left .content .item .TopicInfo #author,
@@ -291,58 +456,4 @@ body {
     color: #bfbfbf;
     font-size: 18px;
     font-weight: 500;
-}
-.latest_news{
-    margin-top: 100px;
-    float: right;
-    width: 270px;
-    height: auto;
-    background-color: #18222d;
-    border: 1px solid rgba(100, 100, 100, 0.4);
-}
-
-
-.latest_news .cell .photo{
-    padding-top: 5px;
-    float: left;
-    width: 50px;
-    height: 50px;
-    padding-left: 5px;
- 
-
-}
-.latest_news .cell .photo img{
-    display: inline-block;
-    width: 38px;
-    height: 38px;
-    max-height: 48px;
-    border-radius: 10px;
-}
-.news_info{
-    color: #fff;
-    font-size: 18px;
-    font-weight: 400;
-    padding-left: 60px;
-}
-.news_info a:hover {
-    text-decoration: underline;
-}
-.news_info h3{
-    padding-top: 12px;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: medium;
-    
-}
-.news_info h3 a{
-    color: white;  
-    
-}
-.title{
-    text-align: center;
-    font-family: 'Times New Roman', Times, serif;
-    padding-bottom: 5px;
-    opacity:0.8;
-    color: white;
-    background-color: #3e5874;
- 
 }
