--- a/templates/index.html
+++ b/templates/index.html
@@ -112,6 +112,83 @@
                 </div>
             </div>
         </div>
+        
+        <div class="latest_news">
+            <div class="title">
+                <h3>今日热议主题</h3>
+            </div>
+            <HR align=center width=270 color=grey SIZE=1 >
+             <div class="cell">
+                 <div class="photo">
+                     <a href="#">
+                         <img src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="avatar">
+                     </a>
+                 </div>
+                 <div class="news_info">
+                     <h3><a href="#">大家平时有什么用的东西吗</a></h3>
+                     
+                 </div>
+             </div>
+             <HR align=center width=270 color=grey SIZE=1>
+             <div class="cell">
+                 <div class="photo">
+                     <a href="#">
+                         <img src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="avatar">
+                     </a>
+                 </div>
+                 <div class="news_info">
+                     <h3><a href="#">苹果手机</a></h3>
+                         
+                 </div>
+             </div>
+             <HR align=center width=270 color=grey SIZE=1>
+             <div class="cell">
+                 <div class="photo">
+                     <a href="#">
+                         <img src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="avatar">
+                     </a>
+                 </div>
+                 <div class="news_info">
+                     <h3><a href="#">安卓手机</a></h3>
+                             
+                 </div>
+             </div>
+             <HR align=center width=270 color=grey SIZE=1>
+             <div class="cell">
+                 <div class="photo">
+                     <a href="#">
+                         <img src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="avatar">
+                     </a>
+                 </div>
+                 <div class="news_info">
+                     <h3><a href="#">智能手表</a></h3>
+                                 
+                 </div>
+             </div>
+             <HR align=center width=270 color=grey SIZE=1>
+             <div class="cell">
+                 <div class="photo">
+                     <a href="#">
+                         <img src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="avatar">
+                     </a>
+                 </div>
+                 <div class="news_info">
+                     <h3><a href="#">你好</a></h3>
+                                     
+                 </div>
+             </div>
+             <HR align=center width=270 color=grey SIZE=1>
+             <div class="cell">
+                 <div class="photo">
+                 <a href="#">
+                         <img src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="avatar">
+                     </a>
+                 </div>
+                 <div class="news_info">
+                     <h3><a href="#">谢谢</a></h3>
+                                         
+                 </div>
+             </div>
     </div>
 </body>
 
