--- a/static/css/index.css
+++ b/static/css/index.css
@@ -347,3 +347,71 @@ body {
     color: white;
     background-color: #3e5874;
 }
+
+.rightBar .emotion {
+    width: 270px;
+    height: auto;
+    background-color: #18222d;
+}
+
+.rightBar .emotion .emotion-title {
+    border: 1px solid rgba(100, 100, 100, 0.4);
+}
+
+.rightBar .emotion h3 {
+    height: 50px;
+    line-height: 50px;
+    font-size: 18px;
+    font-weight: 500;
+    color: #bfbfbf;
+    text-align: center;
+}
+
+.rightBar .emotion .emotion-content {
+    width: 270px;
+    height: auto;
+}
+
+.rightBar .emotion .emotion-content .emotion-item {
+    /* display: flex; */
+    width: 270px;
+    border: 1px solid rgba(100, 100, 100, 0.4);
+}
+
+.rightBar .emotion .emotion-content .emotion-item p {
+    padding: 5px 10px;
+    width: 270px;
+    height: auto;
+    min-height: 50px;
+    font-size: 14px;
+    font-weight: 500;
+    text-indent: 2em;
+    color: #bfbfbf;
+}
+
+.rightBar .emotion .emotion-content .emotion-item span {
+    display: block;
+    padding-right: 30px;
+    text-align: right;
+    width: 270px;
+    height: 20px;
+    line-height: 20px;
+    font-size: 10px;
+    text-indent: 2em;
+    color: #bfbfbf;
+}
+
+.watch-more {
+    display: inline-block;
+    padding-right: 20px;
+    width: 268px;
+    height: 20px;
+    line-height: 20px;
+    text-align: right;
+    font-size: 13px;
+    color: #bfbfbf;
+}
+
+.watch-more:hover {
+    color: #cfcccc;
+}
