fix bugs of css

--- a/templates/index.html
+++ b/templates/index.html
@@ -89,10 +89,10 @@
                 <div class="box">
                     <div class="box-title">
                         <ul>
-                            <li>
+                            <li class="info-box">
                                 <a href="#"><img id="avatar" src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="avatar"></a>
                             </li>
-                            <li><a id="name" href="#">lucas</a></li>
+                            <li class="info-box"><a id="name" href="#">lucas</a></li>
                         </ul>
                     </div>
                     <div class="box-content">
@@ -132,6 +132,7 @@
                 </div>
             </div>
         </div>
+    </div>
 </body>
 
 </html>
