--- a/static/css/index.css
+++ b/static/css/index.css
@@ -219,7 +219,7 @@ body {
     /* border-bottom: rgba(100, 100, 100, 0.4) 1px solid; */
 }
 
-.rightBar .box li {
+.rightBar .box .info-box {
     display: inline-block;
     width: 50px;
     height: 50px;
