fix bugs of css

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
                         </a>
                     </div>
                     <div class="TopicInfo">
-                        <h3><a href="#">上海市委书记李强：把防控措施严格落到位，把民生需求用心托好底...</a></h3>
+                        <h3 class="topic-title"><a href="#">上海市委书记李强：把防控措施严格落到位，把民生需求用心托好底...</a></h3>
                         <p>
                             <span><a href="#" id="type">问答</a> · </span>
                             <a href="#" id="author">lucas</a>
@@ -70,7 +70,7 @@
                         </a>
                     </div>
                     <div class="TopicInfo">
-                        <h3><a href="#">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</a></h3>
+                        <p class="topic-title"><a href="#">today is a beautiful day and i feel happy all day today is a beautiful day and i feel happy all day today is a beautiful day and i feel happy all day</a></p>
                         <p>
                             <span><a href="#" id="type">问答</a> · </span>
                             <a href="#" id="author">lucas</a>
