--- a/templates/index-th.html
+++ b/templates/index-th.html
@@ -58,7 +58,7 @@
                         </a>
                     </div>
                     <div class="TopicInfo">
-                        <h3><a href="#">[[${topic.title}]]</a></h3>
+                        <h3 class="topic-title"><a href="#">[[${topic.title}]]</a></h3>
                         <p>
                             <span><a href="#" id="type">[[${topic.type}]]</a> · </span>
                             <a href="#" id="author">[[${topic.author}]]</a>
@@ -73,22 +73,23 @@
             </div>
         </div>
         <div class="rightBar">
-            <div class="inner">
+            <div class="inner" th:if="${session['loginUser']}!=null">
                 <div class="box">
                     <div class="box-title">
                         <ul>
-                            <li>
+                            <li class="info-box">
                                 <a href="#"><img id="avatar" th:src="${session.loginUser.avatar}" alt="avatar"></a>
                             </li>
-                            <li><a id="name" href="#">lucas</a></li>
+                            <li class="info-box"><a id="name" href="#">[[${session.loginUser.name}]]</a></li>
                         </ul>
                     </div>
                     <div class="box-content">
                         <table>
                             <tbody>
                                 <tr>
-                                    <td><a href="#"><span>9</span><span>主题</span></a></td>
-                                    <td><a href="#"><span>9</span><span>emotion</span></a></td>
+                                    <td><a href="#"><span>[[${topicCount}]]</span><span>主题</span></a></td>
+                                    <!--                            <td><a href="#"><span>1</span><span>主题</span></a></td>-->
+                                    <td><a href="#"><span>[[${emotionCount}]]</span><span>emotion</span></a></td>
                                     <td><a href="#"><span>9</span><span>好友</span></a></td>
                                 </tr>
                             </tbody>
@@ -96,6 +97,19 @@
                     </div>
                     <div class="create_topic">
                         <a href="#">发布新主题</a>
+                    </div>
+                </div>
+                <div class="sep20"></div>
+                <div class="emotion">
+                    <div class="emotion-title">
+                        <h3>emotion</h3>
+                    </div>
+                    <div class="emotion-content">
+                        <ul th:each="emotion:${emotions}">
+                            <li class="emotion-item">
+                                <p>[[${emotion.content}]]</p><span>· [[${emotion.time}]]</span></li>
+                        </ul>
+                        <a href="#"><span class="watch-more">查看更多</span></a>
                     </div>
                 </div>
             </div>
