add input for emotion

--- a/templates/index.html
+++ b/templates/index.html
@@ -111,10 +111,15 @@
                     </div>
                 </div>
                 <div class="sep20"></div>
-                <div class="sep20"></div>
                 <div class="emotion">
                     <div class="emotion-title">
                         <h3>emotion</h3>
+                    </div>
+                    <div class="create-emotion">
+                        <form method="post">
+                            <input id="content" name='emotion' placeholder="You Can Write Your Emotion Here!">
+                            <input class="button" value='Submit' type='submit'>
+                        </form>
                     </div>
                     <div class="emotion-content">
                         <ul>
