--- a/static/css/index.css
+++ b/static/css/index.css
@@ -371,6 +371,40 @@ body {
     text-align: center;
 }
 
+.rightBar .emotion .create-emotion form #content {
+    outline-style: none;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    padding: 14px 14px;
+    width: 270px;
+    font-size: 14px;
+}
+
+.rightBar .emotion .create-emotion form #content:focus {
+    border-color: #66afe9;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6)
+}
+
+.rightBar .emotion .create-emotion form .button {
+    background-color: #00c403;
+    border: none;
+    color: #f5f5f5;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin-left: 200px;
+    font-size: 16px;
+}
+
+.rightBar .emotion .create-emotion form .button:hover {
+    background-color: #09840d;
+    border: none;
+    box-shadow: 0px 0px 2px #3e5874;
+}
+
 .rightBar .emotion .emotion-content {
     width: 270px;
     height: auto;
