--- a/templates/index.html
+++ b/templates/index.html
@@ -124,7 +124,13 @@
                     <div class="emotion-content">
                         <ul>
                             <li class="emotion-item">
-                                <p>today is a beautiful day and i feel happy all day</p><span>· 3小时前</span></li>
+                                <p>today is a beautiful day and i feel happy all day</p>
+                                <form action="post">
+                                    <input type="hidden" name="id" value="1">
+                                    <input class="button" value='DEL' type='submit'>
+                                </form>
+                                <span>· 3小时前</span>
+                            </li>
                             <li class="emotion-item">
                                 <p>today is a beautiful day and i feel happy all day</p><span>· 3小时前</span></li>
                             <li class="emotion-item">
