--- a/templates/index.html
+++ b/templates/index.html
@@ -125,7 +125,7 @@
                         <ul>
                             <li class="emotion-item">
                                 <p>today is a beautiful day and i feel happy all day</p>
-                                <form action="post">
+                                <form method="post" action="/delEmotion">
                                     <input type="hidden" name="id" value="1">
                                     <input class="button" value='DEL' type='submit'>
                                 </form>
