--- a/templates/chat.html
+++ b/templates/chat.html
@@ -27,7 +27,7 @@
     <div class="wrapper">
         <div class="sep20"></div>
         <div class="left">
-            <div class="content" id="question_topics">
+            <div class="content">
                 <div class="question">
                     <div class="title">
                         <h5>问与答</h5>
@@ -41,15 +41,12 @@
                     <div class="Question_info">
                         <h3><a href="#">要去大城市讨生活了，有什么相见恨晚的建议吗</a></h3>
 
-                        <button class="controll" id="previous"><img src = "../static/images/up-arrow.png"></button>
-                        <button class="controll" id="next"><img src = "../static/images/arrow-down-sign-to-navigate.png"></button>
                         <p>
                             <a href="#" id="author">lucas</a>
                             <span> · 3分钟前</span>
                             <span> · 最后回复来自 · <a href="#" id="reply_who">lucas</a></span>
                             <span> · 6476次点击</span>
                         </p>
-
 
                     </div>
                 </div>
@@ -78,22 +75,11 @@
                             <span> · 最后回复来自 · <a href="#" id="reply_who">lucas</a></span>
                             <span> · 2022-05-06</span>
                         </p>
-
-                        <p>
-                            <span><a href="#" id="type">相亲</a> </span>
-                            <span><a href="#" id="type">大城市</a> </span>
-                            <span><a href="#" id="type">相见恨晚</a> </span>
-                            <span><a href="#" id="type">而立之年</a> </span>
-                        </p>
-
                     </div>
 
                 </div>
 
             </div>
-
-
-
 
 
 
@@ -103,13 +89,10 @@
                         <a href="#">
                             <img src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="avatar">
                         </a>
-
                     </div>
                     <div class="TopicInfo">
                         <h3><a href="#">paradoxs</a></h3>
-                        <p>
-                            别去
-                        </p>
+                        <p>别去</p>
                     </div>
                     <div class="TopicNow">
                         <p>15</p>
