add details page

--- a/templates/details.html
+++ b/templates/details.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="topic-title">
                     <h3>公正评价，这代码什么水平</h3>
-                    <span id="author">lucas · </span>
+                    <span id="author"><a href="#">lucas</a> · </span>
                     <span id="time">3分钟前 · </span>
                     <span id="click-count">1353次</span>
                     <div class="avatar"><img src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="avatar"></div>
@@ -45,14 +45,13 @@
                 <p>
                     发现很多程序的运行环境，都需要 python 支持，而且，版本还不一样。python2 和 python3 都需要。 楼主一直整得不太好（因为不是经常使用），经常一个程序或者环境跑起来，缺 python 。所以特意来请教一下，大家有没有比较好的 best practice ，管理 python 的版本，2 & 3 ，以及对应的 pip 。 macOS 和 windows 都分别怎么设置，比较好用&通用？ 谢谢！
                 </p>
-                <hr>
                 <span id="click-count">· 1353次点击</span>
             </div>
             <div class="sep20"></div>
             <div class="comments">
                 <div class="comment-header">
                     <div class="comment-count">
-                        <span>· 0 comments</span>
+                        <span>0 comments</span>
                         <span>· 2022-05-12 10:42:18 +08:00</span>
                     </div>
                 </div>
@@ -63,7 +62,82 @@
                         </a>
                     </div>
                     <div class="reply-info">
-
+                        <span id="user-name"><a href="#">Lucas</a></span>
+                        <span id="time"> · 30分钟前</span>
+                        <span id="count"> 100</span>
+                        <p>atcoding 的视频是很好的 beginner's guide, 你应该已经看过了。其他的可以翻翻 AllinBon 的知乎专栏，他是中文社区的运营 https://www.zhihu.com/column/c_1302994040707948544 我其实也有打算写下我的 Obsidian 使用技巧，有兴趣的话完成后通知你。</p>
+                    </div>
+                </div>
+                <div class="cell">
+                    <div class="reply-avatar">
+                        <a href="#">
+                            <img src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="avatar">
+                        </a>
+                    </div>
+                    <div class="reply-info">
+                        <span id="user-name"><a href="#">Lucas</a></span>
+                        <span id="time"> · 30分钟前</span>
+                        <span id="count"> 100</span>
+                        <p>atcoding 的视频是很好的 beginner's guide, 你应该已经看过了。其他的可以翻翻 AllinBon 的知乎专栏，他是中文社区的运营 https://www.zhihu.com/column/c_1302994040707948544 我其实也有打算写下我的 Obsidian 使用技巧，有兴趣的话完成后通知你。</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="rightBar">
+            <div class="inner">
+                <div class="box">
+                    <div class="box-title">
+                        <ul>
+                            <li class="info-box">
+                                <a href="#"><img id="avatar" src="../static/images/0422de8ba1bd4cb7b5f0fc2c2991c76e.png" alt="avatar"></a>
+                            </li>
+                            <li class="info-box"><a id="name" href="#">lucas</a></li>
+                        </ul>
+                    </div>
+                    <div class="box-content">
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <td><a href="#"><span>9</span><span>主题</span></a></td>
+                                    <td><a href="#"><span>9</span><span>emotion</span></a></td>
+                                    <td><a href="#"><span>9</span><span>好友</span></a></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="create_topic">
+                        <a href="#">发布新主题</a>
+                    </div>
+                </div>
+                <div class="sep20"></div>
+                <div class="emotion">
+                    <div class="emotion-title">
+                        <h3>emotion</h3>
+                    </div>
+                    <div class="create-emotion">
+                        <form method="post">
+                            <input id="content" name='emotion' placeholder="You Can Write Your Emotion Here!">
+                            <input class="button" value='Submit' type='submit'>
+                        </form>
+                    </div>
+                    <div class="emotion-content">
+                        <ul>
+                            <li class="emotion-item">
+                                <p>today is a beautiful day and i feel happy all day</p>
+                                <form method="post" action="/delEmotion">
+                                    <input type="hidden" name="id" value="1">
+                                    <input class="button" value='DEL' type='submit'>
+                                </form>
+                                <span>· 3小时前</span>
+                            </li>
+                            <li class="emotion-item">
+                                <p>today is a beautiful day and i feel happy all day</p><span>· 3小时前</span></li>
+                            <li class="emotion-item">
+                                <p>today is a beautiful day and i feel happy all day</p><span>· 3小时前</span></li>
+                            <li class="emotion-item">
+                                <p>today is a beautiful day and i feel happy all day.11111 1 123123 1231231231 123 123123 41234</p><span>· 3小时前</span></li>
+                        </ul>
+                        <a href="#"><span class="watch-more">查看更多</span></a>
                     </div>
                 </div>
             </div>
