--- a/static/css/details.css
+++ b/static/css/details.css
@@ -32,13 +32,10 @@ body {
     height: 44px;
     width: 1100px;
     margin: 0 auto;
-    /* background-color: pink; */
 }
 
 .top .tools {
-    display: float;
     float: right;
-    /* background-color: #fff; */
 }
 
 .top .tools ul li {
@@ -107,7 +104,7 @@ body {
     font-size: 24px;
     font-weight: 500;
     line-height: 150%;
-    margin: 10px 0 10px;
+    margin: 10px 70px 10px 0;
     padding: 0;
     color: #fff;
 }
@@ -116,6 +113,10 @@ body {
     font-size: 15px;
     font-weight: bold;
     color: #bfbfbf;
+}
+
+.left .topic-header .topic-title #author a:hover {
+    color: #99dff9;
 }
 
 .left .topic-header .topic-title #click-count {
