--- a/static/css/details.css
+++ b/static/css/details.css
@@ -104,7 +104,7 @@ body {
     font-size: 24px;
     font-weight: 500;
     line-height: 150%;
-    margin: 10px 70px 10px 0;
+    margin: 10px 90px 10px 0;
     padding: 0;
     color: #fff;
 }
@@ -497,4 +497,41 @@ body {
 
 .watch-more:hover {
     color: #cfcccc;
+}
+
+.left .create-reply {
+    width: 770px;
+    background-color: #18222d;
+}
+
+.left .create-reply label {
+    display: inline-block;
+    width: 770px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    color: #bfbfbf;
+}
+
+.left .create-reply textarea {
+    width: 770px;
+    height: 300px;
+    background-color: #57585a;
+    color: #2a2a2a;
+    font-size: 16px;
+}
+
+.left .create-reply form .button {
+    display: inline-block;
+    margin: 0 10px 0 700px;
+    background-color: #00c403;
+    border: none;
+    color: #f5f5f5;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    border-radius: 5px;
 }
